Final Tugas Week 11
Task Mesin Translasi Selesai

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 
 Week 11 Mesin Translasi/.ipynb_checkpoints/Mesin Translasi-checkpoint.ipynb
+Week 11 Mesin Translasi/Laporan_1301173380.docx
+Week 11 Mesin Translasi/~$poran_1301173380.docx
+Week 11 Mesin Translasi/Tugas 11_1301173380.zip
